modeldb/base/deployment-graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modeldb-graphql
  namespace: onepanel
  labels:
    app: modeldb
    component: graphql
spec:
  selector:
    matchLabels:
      app: modeldb
      component: graphql
  template:
    metadata:
      labels:
        app: modeldb
        component: graphql
      annotations:
        verta.ai/disable_anti_affinity: "true"
    spec:
      containers:
        - image: vertaaiofficial/modeldb-graphql:latest
          imagePullPolicy: "Always"
          name: modeldb
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 64Mi
