modeldb/base/deployment-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modeldb-webapp
  namespace: $(applicationDefaultNamespace)
  labels:
    app: modeldb
    component: webapp
spec:
  selector:
    matchLabels:
      app: modeldb
      component: webapp
  template:
    metadata:
      labels:
        app: modeldb
        component: webapp
      annotations:
        verta.ai/disable_anti_affinity: "true"
    spec:
      containers:
        - image: 'onepanel/modeldb_web:0.0.1'
          imagePullPolicy: Always
          name: modeldb
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: [
                  "/bin/sh", "-c",
                  "sleep 10",
                ]
