modeldb/base/statefulset-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: modeldb-postgresql
  namespace: $(applicationDefaultNamespace)
  labels:
    app: postgresql
    chart: postgresql-3.16.1
    release: "modeldb"
spec:
  serviceName: modeldb-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "modeldb"
      role: master
  template:
    metadata:
      name: modeldb-postgresql
      labels:
        app: postgresql
        chart: postgresql-3.16.1
        release: "modeldb"
        heritage: "Tiller"
        role: master
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: modeldb-postgresql
          image: docker.io/bitnami/postgresql:10.7.0
          imagePullPolicy: "Always"
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "postgres" -h localhost
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "postgres" -h localhost
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
