modeldb/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: modeldb-backend
  namespace: $(applicationDefaultNamespace)
  labels:
    app: modeldb
    component: backend
spec:
  ports:
    - name: backend
      port: 8085
    - name: artifactstore
      port: 8086
    - port: 3000
      name: http
  selector:
    app: modeldb
    component: backend
  type: ClusterIP
