modeldb/base/service-database-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: modeldb-postgresql-headless
  namespace: $(applicationDefaultNamespace)
  labels:
    app: postgresql
    chart: postgresql-3.16.1
    release: "modeldb"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
  selector:
    app: postgresql
    release: "modeldb"
