modeldb/base/service-graphql.yaml
apiVersion: v1
kind: Service
metadata:
  name: modeldb-graphql
  namespace: onepanel
  labels:
    app: modeldb
    component: graphql
spec:
  ports:
    - port: 3000
  selector:
    app: modeldb
    component: graphql
  type: ClusterIP
