modeldb/base/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: modeldb-webapp
  namespace: $(applicationDefaultNamespace)
  labels:
    app: modeldb
    component: webapp
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: modeldb
    component: webapp
  type: ClusterIP
