modeldb/base/virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: modeldb
  namespace: onepanel
spec:
  gateways:
    - istio-system/ingressgateway
  hosts:
    - modeldb--$(applicationDefaultNamespace).$(applicationDomain)
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: modeldb
            port:
              number: 80
